--- a/main.html
+++ b/main.html
@@ -38,9 +38,10 @@
 
         <label for="Password">Password</label>
         <input type="password" id="password" placeholder="Password" required>
-        
+
         <label for="tos">I agree to the TOS</label>
         <input type="checkbox" id="tos" required>
+        <button type="submit">Submit</button>
 
 
     </form>
