--- a/main.html
+++ b/main.html
@@ -27,16 +27,16 @@
             <option value="MERCEDEZ">MERCEDEZ</option>
             
         </select>
-        <label for="Age">Age</label>
+        <label for="age">Age</label>
         <input type="number" name="Age" id="age" required>
 
         <label for="dob">DOB</label>
-        <input type="date"  id="age" placeholder="Age" required>
+        <input type="date"  id="dob" placeholder="Age" required>
 
         <label for="tel">Phone Number</label>
         <input type="tel" id="tel" placeholder="xxx-xxx-xxxx" >
 
-        <label for="Password">Password</label>
+        <label for="password">Password</label>
         <input type="password" id="password" placeholder="Password" required>
 
         <label for="tos">I agree to the TOS</label>
